# ca-util

./: .gitignore  CMakeLists.txt  README.md
include/: cstream.h  memstream.h  utils.h
src/: drop_extension.c  filename.c  filesize.c
src/memstream/: memstream_eof.c  memstream_getc.c  memstream_putc.c  memstream_read.c  memstream_seek.c  memstream_tell.c  memstream_write.c
